@@ -5,14 +5,16 @@ Koan is written & maintained by:
 
     Michael DeHaan <mdehaan@redhat.com>
 
-Patches and other contributions from:
+Patches and other contributions from (alphabetically):
 
     Tru Huynh <tru@pasteur.fr>
     Matt Hyclak <hyclak@math.ohiou.edu>
     Mark McLoughlin <markmc@redhat.com>
+    Gavin Romig-Koch <gavin@redhat.com>
     Adam Rosenwald <thestrider@gmail.com>
     Al Tobey <tobert@gmail.com>
     Adam Wolf <adamwolf@feelslikeburning.com>
+
     [...send patches to get your name here...]
     
 
